# gato-framework

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: bootstrap.rs  main.rs
src/app/: index_controller.rs  mod.rs
src/config/: bootstrap.rs  mod.rs
src/domains/index/: index_controller.rs  mod.rs
