[package]
name = "web"
version = "0.1.0"
authors = ["Pedro Soares <contato@pedrosoares.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gato-core = "0.2"
gato-apache-cgi = "0.2"
gato-simple-router = "0.2"
serde_json = "1.0"
