[package]
name = "web"
version = "0.1.1"
authors = ["Pedro Soares <contato@pedrosoares.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gato-core = "0.5"
gato-http-server = "0.0.4"
gato-apache-cgi = "0.5"
gato-simple-router = "0.5"
gato-stdout-logger = "0.5"
serde_json = "1.0"
